Foto de Jesus añadida

--- a/people.html
+++ b/people.html
@@ -366,11 +366,11 @@
             </div>
           </div>
           <div class="card">
-            <!-- <img
-              src="assets/images/people/cards/jesusgg.png"
+            <img
+              src="assets/images/people/cards/jesusgg.jpg"
               class="card-img-top"
               alt="researcher"
-            /> -->
+            />
             <div class="card-body">
               <h5 class="card-title people-title-component">
                 Jesús García Gutiérrez | PhD Candidate
