--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
          </div>
          <div class="mid-container text-white">
             <h2 class="display-4">About us</h2>
-            <p class="lead">A motivated and professional team of scientists</p>
+            <p class="lead">Our research</p>
             <hr class="my-4">
          </div>
       </div>
@@ -71,6 +71,127 @@
          <p class="text-justify">In the Singular Laboratory in Advanced Technologies F2N2Lab at the University of Granada, the group carries out cutting-edge research on magnetic nanomaterials through rheomicroscopy experiments, particle-level simulations (molecular dynamics), and finite element method simulations. Currently, we are developing several Nanomedicine applications, in particular cancer treatment and tissue regeneration methods, through the use of non-stationary triaxial magnetic fields using our specially designed equipment.
          </p>
       </div>
+      <!-- Research Areas -->
+      <div class="container card-distance">
+      <div>
+         <h3 id="research_areas">Research Areas</h3>
+      </div>
+      <div class="row justify-content-center" style="margin-bottom: 30px;">
+         <div class="card-deck">
+            <!-- Card 1 -->
+            <div class="card" style="background-color: rgba(42, 96, 153, 0.1);">
+               <img src="assets/images/about/selfassembly.png" class="card-img-top" alt="area1">
+               <div class="card-body">
+                  <h5 class="card-title people-title-component">
+                     Magnetic colloids self-assemby
+                  </h5>
+                  <p class="card-text">
+                     We study the self-assembly of magnetic colloids in the presence of external magnetic fields. We are interested in the formation of complex structures and their physical-chemical properties.
+                  </p>
+               </div>
+            </div>
+            <!-- Card 2 -->
+            <div class="card" style="background-color: rgba(21, 132, 102, 0.1);">
+               <img src="assets/images/about/hydrogel.png" class="card-img-top" alt="area2">
+               <div class="card-body">
+                  <h5 class="card-title people-title-component">
+                     Magnetic hydrogels
+                  </h5>
+                  <p class="card-text">
+                     We develop magnetic hydrogels for tissue engineering and drug delivery. We are interested in the mechanical properties of these materials and their response to magnetic fields.
+                  </p>
+               </div>
+            </div>
+         </div>
+      </div>
+
+      <div class="row justify-content-center" style="margin-bottom: 30px;">
+         <div class="card-deck">
+            <!-- Card 3 -->
+            <div class="card" style="background-color: rgba(255, 191, 0, 0.1);">
+               <img src="assets/images/about/magnetorheology.jpg" class="card-img-top" alt="area3">
+               <div class="card-body">
+                  <h5 class="card-title people-title-component">
+                     Magnetorheology
+                  </h5>
+                  <p class="card-text">
+                     We study the rheological properties of magnetic suspensions in the presence of magnetic fields. We are interested in the mechanical characterization of new materials.
+                  </p>
+               </div>
+            </div>
+            <!-- Card 4 -->
+            <div class="card" style="background-color: rgba(0, 0, 0, 0.1);">
+               <img src="assets/images/about/generation.png" class="card-img-top" alt="area4">
+               <div class="card-body">
+                  <h5 class="card-title people-title-component">
+                     Magnetic field generation
+                  </h5>
+                  <p class="card-text">
+                     We develop new methods for the generation of non-stationary magnetic fields. We engineer powerful devices for high-frequency magnetic field generation and accurate synchronization.
+                  </p>
+               </div>
+            </div>
+         </div>
+      </div>
+
+      <div class="row justify-content-center" style="margin-bottom: 30px;">
+         <div class="card-deck">
+            <!-- Card 5 -->
+            <div class="card" style="background-color: rgba(42, 96, 153, 0.1);">
+               <img src="assets/images/about/md.png" class="card-img-top" alt="area5">
+               <div class="card-body">
+                  <h5 class="card-title people-title-component">
+                     Brownian dynamics simulations
+                  </h5>
+                  <p class="card-text">
+                     We perform Brownian dynamics simulations to study the particle-level structure of magnetic colloids. These simulations reveal key information about the material microstructure.
+                  </p>
+               </div>
+            </div>
+            <!-- Card 6 -->
+            <div class="card" style="background-color: rgba(21, 132, 102, 0.1);">
+               <img src="assets/images/about/fem.png" class="card-img-top" alt="area6">
+               <div class="card-body">
+                  <h5 class="card-title people-title-component">
+                     Finite element method simulations
+                  </h5>
+                  <p class="card-text">
+                     We perform finite element method simulations to study the behavior of magnetic materials treated as a continuum. These tools are useful for computing magnetic field distributions or solving flow equations.
+                  </p>
+               </div>
+            </div>
+         </div>
+      </div>
+
+      <div class="row justify-content-center" style="margin-bottom: 30px;">
+         <div class="card-deck">
+            <!-- Card 7 -->
+            <div class="card" style="background-color: rgba(255, 191, 0, 0.1);">
+               <img src="assets/images/about/tissue.jpg" class="card-img-top" alt="area7">
+               <div class="card-body">
+                  <h5 class="card-title people-title-component">
+                     Tissue engineering
+                  </h5>
+                  <p class="card-text">
+                     We develop new methods for tissue engineering using magnetic hydrogels. We are interested in the development of new methods for the growth of tissues and cell differentiation.
+                  </p>
+               </div>
+            </div>
+            <!-- Card 8 -->
+            <div class="card" style="background-color: rgba(0, 0, 0, 0.1);">
+               <img src="assets/images/about/ratchet.png" class="card-img-top" alt="area8">
+               <div class="card-body">
+                  <h5 class="card-title people-title-component">
+                     Microrheology
+                  </h5>
+                  <p class="card-text">
+                     We study the rheological properties of complex fluids at the microscale. We are interested in Active Microrheology and emergent dynamics in non-Newtonian fluids.
+                  </p>
+               </div>
+            </div>
+         </div>
+      </div>
+      
       
       <!-- Footer -->
       <footer>
