--- a/people.html
+++ b/people.html
@@ -485,7 +485,7 @@
           magnetorheological fluids under strong confinement". November, 2020
         </li>
         <li class="list-group-item">
-          José R. Morillas. "Non-linear magnetorheology: mlitibody and mlitipole
+          José R. Morillas. "Non-linear magnetorheology: multibody and multipole
           effects on the yield stress". November, 2019
         </li>
         <li class="list-group-item">
@@ -502,14 +502,14 @@
         </li>
         <li class="list-group-item">
           Azahara Merino Martos. "A comprehensive evaluation of using magnetic
-          particle for lake restoration". Jliy, 2014
+          particle for lake restoration". July, 2014
         </li>
         <li class="list-group-item">
           Juan Pablo Segovia Gutiérrez. "Viscoelastic magnetorheological
           fluids". September, 2013
         </li>
         <li class="list-group-item">
-          Miguel Wliff-Pérez. "Preparation and characteriztion of nanoemlisions
+          Miguel Wulff-Pérez. "Preparation and characteriztion of nanoemlisions
           for controlled delivery of hydrophobic compounds". May, 2012
         </li>
         <li class="list-group-item">
@@ -557,7 +557,12 @@
 
         <br>
         <p>Visiting Researchers</p>
-        <li class="list-group-item">Kenneth Cerdán Gómez. KU Leuven, Belgium. 05/10/2021-31/12/2021</li>
+        <li class="list-group-item">
+          Rute Chitas. Universidade do Porto, Portugal. 03/03/2023-03/04/2023
+        </li>
+        <li class="list-group-item">
+          Kenneth Cerdán Gómez. KU Leuven, Belgium. 05/10/2021-31/12/2021
+        </li>
         <li class="list-group-item">
           Antonio Jose Faria Bombard. UNIFEI, Brasil. 18/09/2021-31/12/2021
         </li>
@@ -573,7 +578,9 @@
           Martin Cvek. Tomas Bata University, Czech Republic.
           01/05/2018-14/12/2018
         </li>
-        <li class="list-group-item">Jianjian Yng. CSC Scholarship, China. 01/01/2017-31/12/2017</li>
+        <li class="list-group-item">
+          Jianjian Yng. CSC Scholarship, China. 01/01/2017-31/12/2017
+        </li>
         <li class="list-group-item">
           Elizabeth Carreón-Gonález. CONACYT, Mexico. 01/09/2014-31/08/2016
         </li>
