--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="container" id="home-card-1">
          <div class="card">
             <div class="card-body">
-               <h5 class="card-title-home">A Mission</h5>
+               <h5 class="card-title-home"><b>About us</b></h5>
                <p class="card-text">The Magnetic Soft Matter Group is a multidisciplinary group of young researchers from diverse backgrounds in physics, chemistry, biology, biotechnology, chemical engineering, industrial and telecommunication engineering.
                </p>
                <p class="card-text">
@@ -100,13 +100,27 @@
             <img src="assets/images/index/F2N2 (24).jpg" class="card-img-bottom" alt="cappo">
          </div>
       </div>
+      <!-- Intro card 2-->
+      <div class="container" id="home-card-2">
+         <div class="card">
+            <div class="card-body">
+               <h5 class="card-title-home"><b>Researching thoroughly</b></h5>
+               <p class="card-text">In the Singular Laboratory in Advanced Technologies F2N2Lab at the University of Granada, the group carries out cutting-edge research on magnetic nanomaterials through rheomicroscopy experiments, particle-level simulations (molecular dynamics), and finite element method simulations. Currently, we are developing several Nanomedicine applications, in particular cancer treatment and tissue regeneration methods, through the use of non-stationary triaxial magnetic fields using our specially designed equipment. The group collaborates with leading international researchers and research institutes as well as renowned multinational companies (Total Marketing Services, Maxamcorp Holding S. L., Unilever R&D, PDVSA, Repsol-YPF, Kolmer S.A., Rylesa, Polymat, NanoMyP, Nanogetic, Microliquid and Operon).
+               </p>
+               <p class="card-text">
+                  <small class="text-muted"></small>
+               </p>
+            </div>
+            <img src="assets/images/index/F2N2 (90).jpg" class="card-img-top" alt="microscope">
+         </div>
+      </div>
       <!-- Jumbotron with a call to action btn -->
       <div class="jumbotron jumbotron-fluid bg-dark">
          <div class="mid-jumbotron-background">
             <img src="assets/images/index/jtron_mpage_index.jpg" class="blur " alt="jumbotron background books">
          </div>
          <div class="mid-container text-white">
-            <h2 class="display-4">Welcome to the Campus!</h2>
+            <h2 class="display-4">Our team</h2>
             <p class="lead">An international well established team with the passion for Magnetic research</p>
             <hr class="my-4">
             <p>Discover our research group 
@@ -114,21 +128,8 @@
                <i class="fas fa-atom" id="btn-icon"></i>
                </span>
             </p>
-            <a class="btn btn-secondary btn-lg" id="main-page-btn" href="people.html" role="button">Learn more</a>
-         </div>
-      </div>
-      <!-- Intro card 2-->
-      <div class="container" id="home-card-2">
-         <div class="card mb-3">
-            <img src="assets/images/index/F2N2 (90).jpg" class="card-img-top" alt="microscope">
-            <div class="card-body">
-               <h5 class="card-title-home">Researching thoroughly</h5>
-               <p class="card-text">In the Singular Laboratory in Advanced Technologies F2N2Lab at the University of Granada, the group carries out cutting-edge research on magnetic nanomaterials through rheomicroscopy experiments, particle-level simulations (molecular dynamics), and finite element method simulations. Currently, we are developing several Nanomedicine applications, in particular cancer treatment and tissue regeneration methods, through the use of non-stationary triaxial magnetic fields using our specially designed equipment. The group collaborates with leading international researchers and research institutes as well as renowned multinational companies (Total Marketing Services, Maxamcorp Holding S. L., Unilever R&D, PDVSA, Repsol-YPF, Kolmer S.A., Rylesa, Polymat, NanoMyP, Nanogetic, Microliquid and Operon).
-               </p>
-               <p class="card-text">
-                  <small class="text-muted"></small>
-               </p>
-            </div>
+            <a class="btn btn-secondary btn-lg" id="main-page-btn" style="margin: 20px;" href="about.html" role="button">Research</a>
+            <a class="btn btn-secondary btn-lg" id="main-page-btn" style="margin: 20px;" href="people.html" role="button">People</a>
          </div>
       </div>
       <!-- Footer -->
