--- a/projects.html
+++ b/projects.html
@@ -68,9 +68,9 @@
                         <li class="list-group-item"><b>Multi-Axial Magnetic Field RHEology (MAMFRHE)</b> (EF-ST-H2020-MSCA-IF-2020, EU, Grant 101030666). EU.
                            End time: September 2024.   245,732.16 Euros.   PI:  J.R. Morillas. <a href="https://cordis.europa.eu/project/id/101030666" target="_blank"> (learn more) ✶</a></li>
                         <li class="list-group-item"><b>Magnetic Multiaxial Microrheology of Anisotropic Living Materials (3M-LIVMAT)</b> Plan Propio de Investigación y Trasferencia de la Universidad de Granada (Spain).
-                           End time: December 2023.   1,000.00 Euros.   PI: S. Nardecchia.
+                           End time: December 2023.   1,000.00 Euros.   PIs: S. Nardecchia and J. A. Ruiz-Lopez.
                            <li class="list-group-item"><b>Diseño, construcción y validación de un caudalímetro basado en galgas extensiométricas para suspensiones de sílice en sistemas microfluídicos</b> Plan Propio de Investigación y Trasferencia de la Universidad de Granada (Spain).
-                              End time: December 2023.   1,000.00 Euros.   PI: A. Barroso.
+                              End time: December 2023.   1,000.00 Euros.   PIs: A. Barroso and J. R. Morillas.
                         <li class="list-group-item"><b>Desarrollo de Estructuras Multifuncionales mediante Electrohilado de Fluidos Magneto-reológicos</b> (FEDER, A-FQM-396-UGR20). Fondo Europeo de Desarrollo Regional (FEDER) Junta de Andalucia (Spain).
                            End time: June 2023.   60,000.00 Euros.   PI: J. de Vicente.
                         <li class="list-group-item"><b>Autoensamblado y Propiedades Reológicas de Coloides Magnéticos en Campos no Estacionarios</b> (PID2019-104883GB-I00). Ministerio de Ciencia e Innovación (Spain).
