--- a/people.html
+++ b/people.html
@@ -137,6 +137,8 @@
                 >jvicente@ugr.es</small
               >
             </p>
+<a href="https://doi.org/10.1103/PhysRevApplied.19.L021001" target="_blank"> (link) ✶</a></li>
+          
           </div>
         </div>
       </div>
