--- a/people.html
+++ b/people.html
@@ -137,7 +137,7 @@
                 >jvicente@ugr.es</small
               >
             </p>
-<a href="https://doi.org/10.1103/PhysRevApplied.19.L021001" target="_blank"> (link) ✶</a></li>
+<a href="https://doi.org/10.1103/PhysRevApplied.19.L021001" target="_blank"> (link) ✶</a>
           
           </div>
         </div>
