--- a/people.html
+++ b/people.html
@@ -134,10 +134,10 @@
             </p>
             <p class="card-text">
               <small class="text-muted p-people-cards-muted"
-                >jvicente@ugr.es</small
+                >jvicente@ugr.es  <a href="https://doi.org/10.1103/PhysRevApplied.19.L021001" target="_blank"> (link) ✶</a></small
               >
             </p>
-<a href="https://doi.org/10.1103/PhysRevApplied.19.L021001" target="_blank"> (link) ✶</a>
+
           
           </div>
         </div>
