--- a/people.html
+++ b/people.html
@@ -134,7 +134,7 @@
             </p>
             <p class="card-text">
               <small class="text-muted p-people-cards-muted"
-                >jvicente@ugr.es  <a href="https://doi.org/10.1103/PhysRevApplied.19.L021001" target="_blank"> (link) ✶</a></small
+                >jvicente@ugr.es</small
               >
             </p>
 
