--- a/projects.html
+++ b/projects.html
@@ -65,6 +65,14 @@
                   <div id="publications-grid-last">
                      <h3 class="publication-year">Current Grants</h3>
                      <ul class="list-group-flush">
+                        <li class="list-group-item"><b>Controlling Colloidal Gels for Novel Sustainable Materials (CoCoGel)</b> Call HORIZON-MSCA-2022-DN-01, Type of action HORIZON-TMA-MSCA-DN-ID, EU, Grant 101120301. EU.
+                           End time: December 2026.   3,471,588.00 Euros.   PI:  G. Petekidis (J. de Vicente at UGR). <a href="https://cordis.europa.eu/project/id/101120301" target="_blank"> (learn more) ✶</a></li>
+                        <li class="list-group-item"><b>Suspensiones Capilares Magnéticas: Diseño y Propiedades Mecánicas (C‐EXP‐262‐UGR23)</b> University of Granada. Spain.
+                           End time: December 2024.   18,000.00 Euros.   PI:  F. Vereda. </li>
+                        <li class="list-group-item"><b>Functional Magnetic Scaffolds for Tissue Engineering (PID2022-138990NB-I00)</b> Ministerio de Ciencia e Innovación. Spain.
+                           End time: August 2026.   187,500.00 Euros.   PIs:  S. Nardecchia and J. de Vicente. </li>
+                        <li class="list-group-item"><b>Optimización en Laboratorio y Evaluación In-situ del uso de Nanomateriales Magnéticos para la Remediación Ambiental en un Humedal Mediterráneo (TED2021-129384B-C22)</b> Ministerio de Ciencia e Innovación. Spain.
+                           End time: November 2024.   148,350.00 Euros.   PI:  J. de Vicente. </li> 
                         <li class="list-group-item"><b>Multi-Axial Magnetic Field RHEology (MAMFRHE)</b> (EF-ST-H2020-MSCA-IF-2020, EU, Grant 101030666). EU.
                            End time: September 2024.   245,732.16 Euros.   PI:  J.R. Morillas. <a href="https://cordis.europa.eu/project/id/101030666" target="_blank"> (learn more) ✶</a></li>
                         <li class="list-group-item"><b>Magnetic Multiaxial Microrheology of Anisotropic Living Materials (3M-LIVMAT)</b> Plan Propio de Investigación y Trasferencia de la Universidad de Granada (Spain).
@@ -73,7 +81,7 @@
                               End time: December 2023.   1,000.00 Euros.   PIs: A. Barroso and J. R. Morillas.
                         <li class="list-group-item"><b>Desarrollo de Estructuras Multifuncionales mediante Electrohilado de Fluidos Magneto-reológicos</b> (FEDER, A-FQM-396-UGR20). Fondo Europeo de Desarrollo Regional (FEDER) Junta de Andalucia (Spain).
                            End time: June 2023.   60,000.00 Euros.   PI: J. de Vicente.
-                        <li class="list-group-item"><b>Autoensamblado y Propiedades Reológicas de Coloides Magnéticos en Campos no Estacionarios</b> (PID2019-104883GB-I00). Ministerio de Ciencia e Innovación (Spain).
+                        <li class="list-group-item"><b>Autoensamblado y Propiedades Reológicas de Coloides Magnéticos en Campos no Estacionarios</b> (PID2019-104883GB-I00). Ministerio de Ciencia e Innovación. Spain.
                            End time: May 2023.   139,150.00 Euros.   PI: J. de Vicente.
                      </ul>
                   </div>
