--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
                         <li class="list-group-item"><b>Optimización en Laboratorio y Evaluación In-situ del uso de Nanomateriales Magnéticos para la Remediación Ambiental en un Humedal Mediterráneo (TED2021-129384B-C22)</b> Ministerio de Ciencia e Innovación. Spain.
                            End time: November 2024.   148,350.00 Euros.   PI:  J. de Vicente. </li> 
                         <li class="list-group-item"><b>Multi-Axial Magnetic Field RHEology (MAMFRHE)</b> (EF-ST-H2020-MSCA-IF-2020, EU, Grant 101030666). EU.
-                           End time: September 2024.   245,732.16 Euros.   PI:  J.R. Morillas. <a href="https://cordis.europa.eu/project/id/101030666" target="_blank"> (learn more) ✶</a></li>
+                           End time: September 2024.   245,732.16 Euros.   PI:  J.R. Morillas and J. de Vicente. <a href="https://cordis.europa.eu/project/id/101030666" target="_blank"> (learn more) ✶</a></li>
                         <li class="list-group-item"><b>Magnetic Multiaxial Microrheology of Anisotropic Living Materials (3M-LIVMAT)</b> Plan Propio de Investigación y Trasferencia de la Universidad de Granada (Spain).
                            End time: December 2023.   1,000.00 Euros.   PIs: S. Nardecchia and J. A. Ruiz-Lopez.
                            <li class="list-group-item"><b>Diseño, construcción y validación de un caudalímetro basado en galgas extensiométricas para suspensiones de sílice en sistemas microfluídicos</b> Plan Propio de Investigación y Trasferencia de la Universidad de Granada (Spain).
@@ -105,9 +105,9 @@
                            <li class="list-group-item"><b>Reomicroscopio Confocal de Alta Velocidad</b> (EQC2019-005529-P). Adquisición de equipamiento científico-técnico del subprograma estatal de infraestructuras de investigación y equipamiento científico-técnico (Plan Estatal I+D+I 2017-2020) (Spain).
                              End time: December 2021.   522,404.55 Euros.   PI: J. de Vicente.
                            <li class="list-group-item"><b>Structure and Dynamics in Active Glass-forming Liquids (ARIADNE)</b> (EF-ST-H2020-MSCA-IF-2018, EU, Grant 840195). EU.
-                              End time:  May 2021.   160,932.48 Euros. PI: S. Roldán-Vargas. <a href="https://cordis.europa.eu/project/id/840195" target="_blank"> (learn more) ✶</a></li>
+                              End time:  May 2021.   160,932.48 Euros. PI: S. Roldán-Vargas and J. de Vicente. <a href="https://cordis.europa.eu/project/id/840195" target="_blank"> (learn more) ✶</a></li>
                            <li class="list-group-item"><b>Triaxial Magnetic Fields for the Control of Bioactive Materials in Bone Engineering (Matrix-B)</b> (EF-ST-H2020-MSCA-IF-2017, EU, Grant 795318). EU.
-                              End time: August 2020.   170,121.6 Euros.   PI: S. Nardecchia. <a href="https://cordis.europa.eu/project/id/795318" target="_blank"> (learn more) ✶</a></li>
+                              End time: August 2020.   170,121.6 Euros.   PI: S. Nardecchia and J. de Vicente. <a href="https://cordis.europa.eu/project/id/795318" target="_blank"> (learn more) ✶</a></li>
                            <li class="list-group-item"><b>Particle Dynamics in Magneto-fluidic Microsystems</b> (MAT-2016-78778-R). MINECO (Spain).
                               End time: December 2019.   175,000 Euros.   PI: J. de Vicente.
                            <li class="list-group-item"><b>Laboratorio de Caracterización Mecánica de Materiales a Diferentes Escalas</b> (EQC2018-005189-P). Adquisición de equipamiento científico-técnico del subprograma estatal de infraestructuras de investigación y equipamiento científico-técnico (Plan Estatal I+D+I 2017-2020) (Spain).
