Covers and job offer

--- a/index.html
+++ b/index.html
@@ -62,6 +62,42 @@
             <hr class="my-4">
          </div>
       </div>
+
+
+            <!-- Job advertisement -->
+      <div class="container my-4">
+         <div class="card">
+            <div class="card-body">
+               <h2 class="card-title">Two doctoral candidate positions available!</h2>
+               <div class="text-center">
+                  <img src="assets/images/index/cocogel_logo.png" alt="Company Logo" class="mb-3" style="width: 30%;">
+               </div>
+               <p class="card-text">
+                  <b>CoCoGel is a Marie Skłodowska-Curie Industrial Doctoral Network (DN)
+                  (HORIZON-MSCA-2022-DN-01-01)</b> aimed at providing integrated training for early
+                  career researchers, enabling them to achieve scientific excellence and set the
+                  foundations of their future careers. <br>
+                  CoCoGel is seeking 15 motivated PhD Candidates (DCs) in the field of Soft
+                  Condensed Matter. The Network involves leading experts in 6 academic and 6
+                  industrial nodes. In particular, we are looking for two candidates to join the
+                  Magnetic Soft Matter Group at the University of Granada <b>(DC3)</b> and NanoGetic 
+                  <b>(DC11)</b>. See the brochure in the link below for more information about the projects. 
+                  <br>
+                  Enquiries about the positions should be directed to the respective supervisors
+                  (DC3) Juan de Vicente (<a href="mailto:jvicente@ugr.es">jvicente@ugr.es</a>) or (DC11)
+                  Rossella Naselli (<a href="mailto:r.naselli@nanogetic.es">r.naselli@nanogetic.es</a>), and the CoCoGel Project 
+                  Manager Dr. D. Ljumovic 
+                  (<a href="mailto:dusankaljumovic@iesl.forth.gr">dusankaljumovic@iesl.forth.gr</a>)
+                  <br>
+                  <br>
+               </p>
+               <div class="text-center">
+                  <a href="assets/docs/CoCoGelAdvert.pdf" class="btn btn-primary">Detailed information</a>
+               </div>
+            </div>
+         </div>
+      </div>
+
       <!-- Introductory carousel -->
       <div>
          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
