--- a/publications.html
+++ b/publications.html
@@ -60,17 +60,19 @@
    </div>
    <!--Gallery with publication covers-->
    <div class="container" id="container-pub-covers">
+      <h4 class="publications-title" style="text-align: center; font-weight: bold;">
+         Publication covers </h4>
       <div class="row justify-content-center">
          <div class="col-md-8">
             <div class="row">
-               <a href="https://doi.org/10.1039/D0SM01082K" target="_blank"  data-gallery="example-gallery" class="col-sm-4">
-                  <img src="assets/images/publications/F2N2 (48).jpg" class="img-fluid elements-publications-spacing" alt="magazine cover">
+               <a href="https://doi.org/10.1122/8.0000646" target="_blank"  data-gallery="example-gallery" class="col-sm-4">
+                  <img src="assets/images/publications/jor_cover_terkel.jpeg" class="img-fluid elements-publications-spacing" alt="Cover paper">
                </a>
                <a href="https://doi.org/10.1122/1.5093628" target="_blank"  data-gallery="example-gallery" class="col-sm-4">
-                  <img src="assets/images/publications/F2N2 (81).jpg" class="img-fluid elements-publications-spacing" alt="magazine cover">
+                  <img src="assets/images/publications/jor_cover_morillas.jpeg" class="img-fluid elements-publications-spacing" alt="Cover paper">
                </a>
-               <a href="https://iopscience.iop.org/article/10.1088/0964-1726/23/12/125013"  target="_blank" data-gallery="example-gallery" class="col-sm-4">
-                  <img src="assets/images/publications/F2N2 (55).jpg" class="img-fluid elements-publications-spacing" alt="magazine cover">
+               <a href="https://doi.org/10.1039/9781839169755"  target="_blank" data-gallery="example-gallery" class="col-sm-4">
+                  <img src="assets/images/publications/book_cover_devicente.png" class="img-fluid elements-publications-spacing" alt="Book" >
                </a>
             </div>
          </div>
