--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
             <div class="card-body">
                <h2 class="card-title">Two doctoral candidate positions available!</h2>
                <div class="text-center">
-                  <img src="assets/images/index/cocogel_logo.png" alt="Company Logo" class="mb-3" style="width: 30%;">
+                  <img src="assets/images/index/cocogel_logo.png" alt="Cocogel Logo" class="mb-3" style="width: 30%; margin-right: 5%;">
+
+                  <img src="assets/images/index/European_Commission_logo.svg" alt="EU Logo" class="mb-3" style="width: 24%; margin-left: 5%;">
                </div>
                <p class="card-text">
                   <b>CoCoGel is a Marie Skłodowska-Curie Industrial Doctoral Network (DN)
