--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
             <!-- Job advertisement -->
-      <div class="container my-4">
+<!--       <div class="container my-4">
          <div class="card">
             <div class="card-body">
                <h2 class="card-title">Two doctoral candidate positions available!</h2>
@@ -98,7 +98,7 @@
                </div>
             </div>
          </div>
-      </div>
+      </div> -->
 
       <!-- Introductory carousel -->
       <div>
